@@ -1,6 +1,8 @@
 Revision history for Text::Template
 
 {{$NEXT}}
+    - Add support for decoding template files via ENCODING constructor arg
+      [github #11]
 
 1.52  2018-03-19
     - Fix possible 'Subroutine ... redefined' warning (Github #10)
